[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/main/music/checkpoint-song.gd" type="Script" id=2]

[node name="CheckpointSong" type="AudioStreamPlayer"]
bus = "Music Bus"
script = ExtResource( 2 )

[node name="StalenessTimer" type="Timer" parent="."]

[connection signal="timeout" from="StalenessTimer" to="." method="_on_StalenessTimer_timeout"]
